@@ -1234,12 +1234,6 @@ BOOLEAN PhUiSetDepStatusProcess(
     );
 
 PHAPPAPI
-BOOLEAN PhUiSetProtectionProcess(
-    __in HWND hWnd,
-    __in PPH_PROCESS_ITEM Process
-    );
-
-PHAPPAPI
 BOOLEAN PhUiStartService(
     __in HWND hWnd,
     __in PPH_SERVICE_ITEM Service
